# Wiff

./: .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  package-lock.json  package.json  wiff.deb
.cache/clangd/index/: ApplicationContext.h.58F3FB28A448E51F.idx  ApplicationContext.h.F3F44EA925CA19E7.idx  CommandManager.cpp.537F1B9479B59DF7.idx  CommandManager.cpp.97E34AF022CA6B7A.idx  CommandManager.h.16CC2CDAAB446B3B.idx  CommandManager.h.D7D26F53F32B939C.idx  GitCommand.cpp.7DF6C27B9B162C28.idx  GitCommand.cpp.A4469109CA5ADDC5.idx  GitCommand.h.44019BAD152454D1.idx  GitCommand.h.A3D7C64664BD00D0.idx  GrabCommand.cpp.11ADEE7CDA13B2B7.idx  GrabCommand.cpp.B48660324888FAE8.idx  GrabCommand.h.8A1CF556209EDD6A.idx  GrabCommand.h.A4D30555BF02AE25.idx  HelpCommand.cpp.03373E07239022D2.idx  HelpCommand.cpp.70DB8978450AA27C.idx  HelpCommand.h.55ECBA5A572F2945.idx  HelpCommand.h.B7215E2059D45E47.idx  ICommand.h.5705615983E4CF3F.idx  ICommand.h.9262E24D2D600833.idx  LoadingThread.cpp.98E4AE8A67A1EAAE.idx  LoadingThread.cpp.EAB72F1B2EE24176.idx  LoadingThread.h.35C6786A357DA7BE.idx  LoadingThread.h.42E82FAC02278671.idx  ParsedArgs.cpp.23864A498BCB1E0F.idx  ParsedArgs.cpp.361E86ED5D42D39E.idx  ParsedArgs.h.12FF3E337792E8D9.idx  ParsedArgs.h.2DE7104C05817584.idx  ThreadManager.cpp.724BB07E7A8B78BE.idx  ThreadManager.cpp.A0D340E3B9E063B3.idx  ThreadManager.h.AE6988641FCCDD0B.idx  ThreadManager.h.C535BFE7138D932B.idx  ThreadedObject.cpp.BB8D01CC61291F79.idx  ThreadedObject.cpp.E38EAA58F2BB4255.idx  ThreadedObject.h.36B6D000AEBA89A8.idx  ThreadedObject.h.C00C87DFE7F22C27.idx  grab_command_test.cpp.5C28CAE154BDBD97.idx  grab_command_test.cpp.848214C62991F838.idx  main.cpp.6B2874162D00473D.idx  main.cpp.A4A6925EA5F8E512.idx  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: ci.yml  cy.yml  release.yml
src/: main.cpp
src/argument/: ArgumentParser.cpp  ArgumentParser.h  Arguments.h  ParsedArgs.cpp  ParsedArgs.h
src/command/: GrabCommand.h  HelpCommand.h
src/command/base/: Command.h  CommandManager.h  ICommand.h
src/command/git/: GitCommand.cpp  GitCommand.h
src/command/grab/: GrabCommand.cpp  GrabCommand.h
src/command/help/: HelpCommand.cpp  HelpCommand.h
src/command/manager/: CommandManager.cpp  CommandManager.h
src/context/: ApplicationContext.h
src/threads/base/: ThreadedObject.cpp  ThreadedObject.h
src/threads/loading/: LoadingThread.cpp  LoadingThread.h
src/threads/manager/: ThreadManager.cpp  ThreadManager.h
src/ui/loading/: LoadingUI.cpp  LoadingUI.h
src/util/: StringUtils.h
tests/: CMakeLists.txt  grab_command_test.cpp  parsed_args_test.cpp
wiff/DEBIAN/: control
